# geografir

./: .pre-commit-config.yaml  README.md  pull_request_template.md  pyproject.toml
.github/workflows/: lint.yaml  pytest.yaml  unit_test.yaml
bounding_box/: pyproject.toml
bounding_box/src/bounding_box/: __init__.py
geometry/: README.md  pyproject.toml
geometry/src/geometry/: __init__.py  bounding_box.py  crs.py  exceptions.py  geometry.py
geometry/tests/: test_bounding_box.py  test_crs.py  test_geometry.py
object_storage/: README.md  pyproject.toml
object_storage/src/object_storage/: __init__.py  object_location.py  object_store.py  object_store_client.py
object_storage/tests/: test_object_location.py  test_object_store.py  test_object_store_client.py  test_object_store_client.pyt  test_storage_helpers.py
raster_array/: README.md  pyproject.toml
raster_array/src/raster_array/: __init__.py  band_tags.py  exceptions.py  profiles.py  raster_array.py  raster_metadata.py  raster_test_helpers.py
raster_array/tests/: test_band_tags.py  test_profiles.py  test_raster_array.py  test_raster_metadata.py
