[project]
name = "geografir"
version = "0.1.0"
description = "A collection of Python helpers primarily targeted toward geospatial recipes"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[tool.uv.workspace]
members = [
    "object_storage",
]
