[project]
name = "geografir"
version = "0.1.0"
description = "A collection of Python helpers primarily targeted toward geospatial recipes"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
dependencies = ["object_storage"]

[dependency-groups]
dev = [
    "moto>=5.1.10",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[tool.uv.sources]
object_storage = { workspace = true }

[tool.uv.workspace]
members = [
    "object_storage",
    "geometry",
]

[tool.pytest.ini_options]
filterwarnings = [
    # Somehow ShapelyDeprecationWarning causes an error without this line
    "ignore::DeprecationWarning:shapely",
]
