[project]
name = "bounding-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ryanherring", email = "ryan@vibrantplanet.net" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
