[project]
name = "geometry"
version = "0.1.0"
description = "A simple geospatial package wrapping Shapely geometries with CRS information."
readme = "README.md"
authors = [{ name = "mitchellgritts", email = "mitchell@vibrantplanet.net" }]
requires-python = ">=3.12"
dependencies = ["pyproj>=3.7.2", "shapely>=2.1.1"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
