[project]
name = "object-storage"
version = "0.1.0"
description = "S3 object location and object storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.9",
    "moto>=5.1.10",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

# TODO: figure out how to get CI to install the dev dependencies and remove moto above
# [dependency-groups]
# dev = [
#     "moto>=5.1.10",
# ]
